# sph-fluid-simualtion-rust

./: Cargo.toml
src/: lib.rs  main.rs
src/fluid_simulation/: cell_manager.rs  collision_manager.rs  config.rs  external_attractor.rs  fluid_simulation_app.rs  mod.rs  obstacle_collision_manager.rs  particle.rs  particle_dynamics_manager.rs  smoothed_interaction.rs  smothing_kernels.rs
src/fluid_simulation/obstacles/: dam_obstacle.rs  mod.rs  obstacle_trait.rs  rectangle_obstacle.rs
src/graphics/: mod.rs  render_manager.rs
src/graphics_manager/: mod.rs  render_manager.rs
tests/: test_cell_manager.rs
